--- a/src/index.html
+++ b/src/index.html
@@ -2,32 +2,32 @@
 <html lang="en">
 
 <head>
-    <title>WeiCheng | Creative FullStack Developer</title>
+    <title>Kelly | Creative FullStack Developer</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description"
-        content="Portfolio of WeiCheng - Creative developer living in Ukraine - Focused on FullStack and Back End Developer">
+        content="Portfolio of Kelly - Creative developer living in Ukraine - Focused on FullStack and Back End Developer">
     <meta name="keywords"
         content="Laravel, threejs, portfolio, reactjs, react, frontend developer, front-end, programming, web developer, web, developer, React Native, Vue, Angular, Django, backend developer">
-    <meta property="og:site_name" content="WeiCheng Portfolio">
-    <meta property="og:title" content="DingWeiCheng - Creative Developer">
+    <meta property="og:site_name" content="Kelly Portfolio">
+    <meta property="og:title" content="Trey Kelly - Creative Developer">
     <meta property="og:description"
-        content="Portfolio of DingWeiCheng - Creative developer living in Ukraine - Focused on FullStack and Back End Developer">
+        content="Portfolio of Trey Kelly - Creative developer living in Ukraine - Focused on FullStack and Back End Developer">
     <meta property="og:type" content="website">
     <!-- <meta property="og:url" content="https://david-hckh.com/">
     <meta property="og:image" content="https://david-hckh.com/thumbnail.png"> -->
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="627">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="DingWeiCheng">
-    <meta name="twitter:creator" content="@DingWeiCheng">
-    <meta name="twitter:title" content="DingWeiCheng - Creative Developer">
+    <meta name="twitter:site" content="Trey Kelly">
+    <meta name="twitter:creator" content="@Trey Kelly">
+    <meta name="twitter:title" content="Trey Kelly - Creative Developer">
     <meta name="twitter:description"
-        content="Portfolio of DingWeiCheng - Creative developer living in Ukraine - Focused on FullStack and Back End Developer">
+        content="Portfolio of Trey Kelly - Creative developer living in Ukraine - Focused on FullStack and Back End Developer">
     <!-- <meta name="twitter:image" content="https://david-hckh.com/thumbnail.png"> -->
     <meta name="theme-color" content="#EFE7DC">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-title" content="DingWeiCheng Portfolio">
+    <meta name="apple-mobile-web-app-title" content="Trey Kelly Portfolio">
     <meta name="apple-mobile-web-app-status-bar-style" content="translucent">
     <link rel="mask-icon" href="/src/assets/head/logo.svg" color="#091434">
     <link rel="icon" type="image/png" href="/src/assets/head/favion-32x32.png" sizes="32x32">
@@ -172,22 +172,22 @@
             </div>
             <!--Social Link-->
             <div id="menu-social-container" class="row">
-                <a tabindex="-1" target="_blank" href="https://join.skype.com/invite/BpNXw0ERzlfW"><img class="social-icon"
+                <a tabindex="-1" target="_blank" href="https://join.skype.com/invite/FClIgAnPV3N3"><img class="social-icon"
                     src="assets/icons/skype-icon.png" alt="skype contact icon small 28x28"
                     height="28" width="28"></img></a>
-            <a tabindex="-1" target="_blank" href="https://github.com/Minion751"><img class="social-icon"
+            <a tabindex="-1" target="_blank" href="https://github.com/GreatSuccess9858"><img class="social-icon"
                     alt="github contact social icon small 28x28" height="28" width="28"
                     src="assets/icons/github-icon.png"></img></a>
-            <a tabindex="-1" target="_blank" href="https://t.me/GreatSuccess9858">
+            <a tabindex="-1" target="_blank" href="https://t.me/Canvas9858">
                 <img class="social-icon " alt="telegram contact icon small 28x28" height="28"
                     width="28" src="assets/icons/telegram-icon.png"></img></a>
-            <!-- <a tabindex="-1" href="mailto:georgejohnson11305@gmail.com"> <img class="social-icon"
+            <a tabindex="-1" href="mailto:i.bayy.max@gmail.com"> <img class="social-icon"
                     alt="email contact social icon small 28x28" height="28" width="28"
-                    src="assets/icons/gmail-icon.png"></img></a> -->
-            <a tabindex="-1" href="https://discord.gg/"> <img class="social-icon"
+                    src="assets/icons/gmail-icon.png"></img></a>
+            <!-- <a tabindex="-1" href="https://discord.gg/"> <img class="social-icon"
                     alt="discord contact icon small 28x28" height="28" width="28"
-                    src="assets/icons/discord-icon.png"></img></a>
-            <a tabindex="-1" href="+1 413 455 0647"> <img class="social-icon"
+                    src="assets/icons/discord-icon.png"></img></a> -->
+            <a tabindex="-1" href="+17628218393"> <img class="social-icon"
                     alt="discord contact icon small 28x28" height="28" width="28"
                     src="assets/icons/whatsapp_icon.png"></img></a>
             </div>
@@ -219,7 +219,7 @@
         <section id="landing-page-section" class="content-width slide-out-left-transition">
             <svg id="landing-content-svg" viewBox="0 0 500 310" xmlns="http://www.w3.org/2000/svg">
                 <text class="landing-headline" y="60" x="5">Hi,</text>
-                <text class="landing-headline" y="140" x="5">I am DingWeiCheng.</text>
+                <text class="landing-headline" y="140" x="5">I am Trey Kelly.</text>
                 <text class="landing-subheading" x="10" y="185">
                     Full Stack & Back End Developer.
                 </text>
@@ -305,9 +305,9 @@
                         <!--Header Content-->
                         <g transform="translate(170 118)" fill="#34bfff" font-weight="bold">
                             <text x="40" y="0" font-size="14" class="about-header-upper-text">Name :</text>
-                            <text x="40" y="20" font-size="20" class="about-header-lower-text">DingWeiCheng</text>
+                            <text x="40" y="20" font-size="20" class="about-header-lower-text">Trey Kelly</text>
                             <text x="180" y="0" font-size="14" class="about-header-upper-text">Age :</text>
-                            <text x="180" y="20" font-size="20"  class="about-header-lower-text">26</text>
+                            <text x="180" y="20" font-size="20"  class="about-header-lower-text">29</text>
                             <!-- <text x="200" y="0" font-size="12" class="about-header-upper-text">From :</text>
                             <text x="200" y="20" font-size="18" class="about-header-lower-text">Germany</text> -->
                         </g>
@@ -389,7 +389,7 @@
                                 href="../src/assets/icons/baby-pixel.png" x="6" y="7" />
 
                             <!--First Text-->
-                            <text x="88" y="33" class="about-text">At the age of 13, WeiCheng first came in touch with
+                            <text x="88" y="33" class="about-text">At the age of 13, Kelly first came in touch with
                                 UX</text>
                             <text x="88" y="50" class="about-text">Design and app development.</text>
                         </g>
@@ -430,7 +430,7 @@
                                 href="../src/assets/icons/rocket-pixel.png" x="6" y="7" />
 
                             <!--Third Text-->
-                            <text x="88" y="33" class="about-text">Now WeiCheng is looking
+                            <text x="88" y="33" class="about-text">Now Kelly is looking
                                 for</text>
                             <text x="88" y="50" class="about-text">new challenges to work as a FullStack Back End Developer.</text>
                         </g>
@@ -546,22 +546,22 @@
                     </div>
                     <div class="row" id="contact-button-container">
                         <!--Social Icons-->
-                        <a tabindex="-1" target="_blank" href="https://join.skype.com/invite/BpNXw0ERzlfW"><img class="social-icon"
+                        <a tabindex="-1" target="_blank" href="https://join.skype.com/invite/FClIgAnPV3N3"><img class="social-icon"
                                 src="assets/icons/skype-icon.png" alt="skype contact icon small 28x28"
                                 height="28" width="28"></img></a>
-                        <a tabindex="-1" target="_blank" href="https://github.com/SuperStar0718"><img class="social-icon"
+                        <a tabindex="-1" target="_blank" href="https://github.com/GreatSuccess9858"><img class="social-icon"
                                 alt="github contact social icon small 28x28" height="28" width="28"
                                 src="assets/icons/github-icon.png"></img></a>
-                        <a tabindex="-1" target="_blank" href="https://t.me/SuperStar0718">
+                        <a tabindex="-1" target="_blank" href="https://t.me/Canvas9858">
                             <img class="social-icon " alt="telegram contact icon small 28x28" height="28"
                                 width="28" src="assets/icons/telegram-icon.png"></img></a>
-                        <!-- <a tabindex="-1" href="mailto:georgejohnson11305@gmail.com"> <img class="social-icon"
+                        <a tabindex="-1" href="mailto:i.bayy.max@gmail.com"> <img class="social-icon"
                                 alt="email contact social icon small 28x28" height="28" width="28"
-                                src="assets/icons/gmail-icon.png"></img></a> -->
-                        <a tabindex="-1" href="https://discord.gg/tDq4WcVS"> <img class="social-icon"
+                                src="assets/icons/gmail-icon.png"></img></a>
+                        <!-- <a tabindex="-1" href="https://discord.gg/tDq4WcVS"> <img class="social-icon"
                                 alt="discord contact icon small 28x28" height="28" width="28"
-                                src="assets/icons/discord-icon.png"></img></a>
-                        <a tabindex="-1" href="+380972864429"> <img class="social-icon"
+                                src="assets/icons/discord-icon.png"></img></a> -->
+                        <a tabindex="-1" href="+17628218393"> <img class="social-icon"
                                 alt="discord contact icon small 28x28" height="28" width="28"
                                 src="assets/icons/whatsapp_icon.png"></img></a>
                         <!--Submit Button-->
@@ -596,7 +596,7 @@
         </section>
 
         <footer class="row center">
-            <span>&copy; DingWeiCheng</span>
+            <span>&copy; Trey Kelly</span>
 
           
         </footer>
